@@ -10,6 +10,7 @@ gae-wiki 1.1
   wiki for details).
 - The locked:yes property now works.
 - Disabled external URL decoration.
+- Fixed page labels not being shown.
 
 
 gae-wiki 1.0 (20110514)
